# Programming-concepts-and-algorithms-openMP-MPI

./: .gitignore  CMakeLists.txt  ConvolutionEffects.cpp  ConvolutionEffects.h  README.md  file.csv  gaussian_blur_example.cpp  main.cpp  scatter_version.cpp
